Bug 244626 - WebVTT styles not applied with in-band tracks
Summary: WebVTT styles not applied with in-band tracks
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Jer Noble
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-08-31 12:34 PDT by Jer Noble
Modified: 2022-09-02 13:18 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jer Noble 2022-08-31 12:34:26 PDT
WebVTT styles not applied with in-band tracks
Comment 1 Radar WebKit Bug Importer 2022-08-31 12:35:26 PDT
<rdar://problem/99397718>
Comment 2 Jer Noble 2022-08-31 12:40:28 PDT
Pull request: https://github.com/WebKit/WebKit/pull/3869
Comment 3 EWS 2022-09-02 13:18:45 PDT
Committed 254109@main (aa0c9cf7ae83): <https://commits.webkit.org/254109@main>

Reviewed commits have been landed. Closing PR #3869 and removing active labels.