Cherry-pick aa0c9cf7ae83. rdar://problem/102776838

WebVTT styles not applied with in-band tracks
    https://bugs.webkit.org/show_bug.cgi?id=244626
    <rdar://problem/99397718>

    Reviewed by Eric Carlson.

    When parsing a WebVTT header directly with parseFileHeader(), emit newStyleSheetsParsed()
    and newRegionsParsed(), which are normally only emitted when a cue is encountered when parsing
    a header. And when newStyleSheetsParsed() is called, handle it in InbandGenericTextTrack.

    * LayoutTests/http/tests/media/hls/hls-webvtt-style-expected.txt: Added.
    * LayoutTests/http/tests/media/hls/hls-webvtt-style.html: Added.
    * LayoutTests/http/tests/media/resources/hls/subtitles/prog_style.m3u8: Added.
    * LayoutTests/http/tests/media/resources/hls/subtitles/styleSequence0.webvtt: Added.
    * LayoutTests/http/tests/media/resources/hls/test-webvtt-style.m3u8: Added.
    * Source/WebCore/html/track/InbandGenericTextTrack.cpp:
    (WebCore::InbandGenericTextTrack::newStyleSheetsParsed):
    * Source/WebCore/html/track/WebVTTParser.cpp:
    (WebCore::WebVTTParser::parseFileHeader):

    Canonical link: https://commits.webkit.org/254109@main

Canonical link: https://commits.webkit.org/252432.873@safari-7614-branch